Update 2.1 Running bitcoin light client.md

--- a/side-testnet-1/validator&fullnode/2.1 Running bitcoin light client.md
+++ b/side-testnet-1/validator&fullnode/2.1 Running bitcoin light client.md
@@ -1,4 +1,4 @@
-# Running a Bitcoin Testnet3 Full Node
+# Running a Bitcoin Light Client
 
 ## Introduction
 This document provides step-by-step instructions for setting up and running a full node on Bitcoin's testnet3 network. Testnet is an alternative blockchain used for testing purposes, where the coins have no real value.
